easter egg and some spacing fixes

--- a/source/css/euclid-main.css
+++ b/source/css/euclid-main.css
@@ -478,6 +478,7 @@ a.resumator-hide-details:hover { margin-bottom: 0px !important; }
 .merge-down { margin-bottom: -170px; margin-top: 20px; /*margin-top: -20px; */}
 .merge-down-follower { padding-top: 25px; }
 .bump-up, .merge-down-follower { margin-top: -35px; }
+.mini-bump-up { margin-top: -15px; }
 .bump-left { margin-left: -200px; padding-right: 130px; }
 .no-pad { padding: 0; }
 .pad-top { padding-top: 25px; }
@@ -548,4 +549,13 @@ a.resumator-hide-details:hover { margin-bottom: 0px !important; }
 
 @media all and (min-width: 1400px) {
 	#banner-home, #banner-solutions { background-size: cover; }
+}
+
+
+
+@media \0screen {  /* IE8 transparent bg hack */
+	.banner .featured-content-textarea { background-image: url(../img/ie/transparent_BG); }
+	#subnav ul { background-image: url(../img/ie/transparent_BG); }
+	#subnav ul:hover {  background-image: url(../img/ie/transparent_BG); }
+
 }
